Flash region z-index fixed

--- a/client/mobile/app/sass/layout.sass
+++ b/client/mobile/app/sass/layout.sass
@@ -4,7 +4,7 @@ html, body
 
 .flash-region
   position: fixed
-  z-index: 1000
+  z-index: 50
   width: 100%
   right: 0
 
